--- a/ekart/templates/signup.html
+++ b/ekart/templates/signup.html
@@ -2,7 +2,7 @@
 {% block title %}Online Shop: SignUp{% endblock title %}
 
 {% block content %}
-<div class="container d-flex justify-content-center align-items-start" style="margin-top: -50px;">
+<div class="container d-flex justify-content-center align-items-start" style="margin-top: 100px; margin-bottom: 100px;">
     <div class="card p-4 shadow-sm" style="width: 100%; max-width: 400px;">
         <h3 class="text-center mb-4">SignUp</h3>
 
